--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Alpha ice cream</title>
     <link rel="icon" href="/assets/css/feedback.css">
     <link rel="icon" href="/assets/image/logo.png">
 </head>
+
 <body>
-    
+    <section id pa6>
+        <article>
+                <h1>Entre em contato</h1>
+
+
+        
+
+
+
+
+        </article>
+    </section>
+
 </body>
+
 </html>
