--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -6,35 +6,35 @@
 </head>
 <body>
     <div>
-        <p>Depoimento</p>
-        <section>
-            <article>
-                <img src="../assets/image/Ana.jpg" alt="">
+        <p id="dep1">Depoimento</p> <!--DEPOIMENTO PARAGRAFO 1-->
+        <section id="depsec1">
+            <article id="depart1">
+                <img src="../assets/image/Ana.jpg" alt="" id="deimg">
                 <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>               
             </article>
-            <article>
-                <img src="../assets/image/Andrey.jpg" alt="">
+            <article id="depart1">
+                <img src="../assets/image/Andrey.jpg" alt=""id="deimg">
                 <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>
 
             </article>
-            <article>
-                <img src="../assets/image/Giulia.jpg" alt="">
+            <article id="depart1">
+                <img src="../assets/image/Giulia.jpg" alt=""id="deimg">
                 <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>
 
             </article>
         </section>
-        <section>
-            <article>
-                <img src="../assets/image/Scaranello.jpg" alt="">
+        <section id="depsec1">
+            <article id="depart1">
+                <img src="../assets/image/Scaranello.jpg" alt=""id="deimg">
                 <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>               
             </article>
-            <article>
-                <img src="../assets/image/Zambon.jpg" alt="">
+            <article id="depart1">
+                <img src="../assets/image/Zambon.jpg" alt=""id="deimg">
                 <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>
 
             </article>
-            <article>
-                <img src="../assets/image/Marina.jpg" alt="">
+            <article id="depart1">
+                <img src="../assets/image/Marina.jpg" alt=""id="deimg">
                 <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>
 
             </article>
