--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -5,7 +5,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div>
+    <div id="dediv"> <!--DEPOIMENTO DIV-->
         <p id="dep1">Depoimento</p> <!--DEPOIMENTO PARAGRAFO 1-->
         <section id="depsec1">
             <article id="depart1">
