--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -7,8 +7,11 @@
 
 </head>
  <body>
-     <article>
-
+     <article class="article5">
+       <h3>Sorvete</h3>
+       <img src="/assets/image/sorvete1.jfif" height="200px" width="200px">
+       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
+        Lorem Ipsum has been the industry's standard dummy</p>
      </article>
  </body>
  </html>
