--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -5,8 +5,9 @@
     <link rel="stylesheet" href="inicial.css">
 </head>
 <body>
-    <article>
-        <section></section>
+    <article class="article3"> 
+        <h3>Sorvete</h3>
+        <img src="assets/image/">
     </article>
 </body>
 </html>
