--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -5,24 +5,27 @@
     <meta charset="UTF-8">
     <title>Alpha ice cream</title>
     <link rel="icon" href="/assets/css/feedback.css">
-    <link rel="icon" href="/assets/image/logo.png">
+    <link rel="icon" href="/assets/image/sorvete.png">
 </head>
 
 <body>
-    <section id pa6>
-        <article>
+    <div>
+        <section id="pa6">
+            <article>
                 <h1>Entre em contato</h1>
-                <form action="sucsses.html">
+                <form action="sucsses.html" class="form">
                     <label for="">Nome</label>
-                    <input type="text" placeholder="Digite seu nome" id="pa1"required>
+                    <input type="text" placeholder="Digite seu nome" id="pa1" required>
                     <label for="email">E-mail</label>
                     <input type="email" placeholder="Digite seu email" id="pa2" required>
                     <label for="message">Mensagem</label>
                     <input type="message" placeholder="Digite uma Mensagem" id="pa3" required minlength="8">
-                    <p><input type="submit" id="pa4"></p>
+                    <label for="submit" id="pa4"></label>
+                    <input type="submit">
                 </form>
-        </article>
-    </section>
+            </article>
+        </section>
+    </div>
 
 </body>
 
