--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Alpha ice cream</title>
-    <link rel="icon" href="/assets/css/feedback.css">
+    <link rel="stylesheet" href="../assets/css/feedback.css">
     <link rel="icon" href="/assets/image/sorvete.png">
 </head>
 
