--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <meta charset="UTF-8">
-    <title>Sorvete</title>
     <link rel="stylesheet" href="/assets/css/inicial.css">
 </html>
 
 </head>
  <body>
-     <article class="article5">
-       <h3>Sorvete</h3>
-       <img src="/assets/image/sorvete1.jfif" height="200px" width="200px">
-       <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy</p>
+     <article class="article4">
+       <h3>Sorvete Primavera</h3>
+       <img src="../assets/image/sorvete1.png" height="50%" width="50%">
+       <p>Sorvete estilo primavera são a nova tendenca do momento. </p>
+     </article>
+     
+     <article>
+        <h3></h3>
+        <img src="../assets/image/sorvete3.png" height="50%" width="200">
+        <p></p>
      </article>
  </body>
  </html>
