--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -3,8 +3,8 @@
     <link rel="stylesheet" href="/assets/css/inicial.css">
 </html>
 
-</head>
  <body>
+    <div> <section class="section4">
      <article class="article4">
        <h3>Sorvete Primavera</h3>
        <img src="../assets/image/sorvete1.png" height="20%" width="20%">
@@ -14,7 +14,7 @@
      <article>
         <h3></h3>
         <img src="../assets/image/sorvete3.png" height="20%" width="20%">
-        <p></p>
-     </article>
+        <p>venha deliciar com esse copão de sorverte</p>
+     </article></section></div>
  </body>
  </html>
