--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -20,8 +20,7 @@
                     <input type="email" placeholder="Digite seu email" id="pa2" required>
                     <label for="message">Mensagem</label>
                     <input type="message" placeholder="Digite uma Mensagem" id="pa3" required minlength="8">
-                    <label for="submit" id="pa4"></label>
-                    <input type="submit">
+                    <button id="pa4">Enviar</button>
                 </form>
             </article>
         </section>
