--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -1,20 +1,35 @@
 <!DOCTYPE html>
 <html>
-    <link rel="stylesheet" href="/assets/css/inicial.css">
+<link rel="stylesheet" href="/assets/css/inicial.css">
+
 </html>
 
- <body>
-    <div> <section class="section4">
-     <article class="article4">
-       <h3>Sorvete Primavera</h3>
-       <img src="../assets/image/sorvete1.png" height="20%" width="20%">
-       <p>Sorvete estilo primavera são a nova tendenca do momento. </p>
-     </article>
-     
-     <article>
-        <h3></h3>
-        <img src="../assets/image/sorvete3.png" height="20%" width="20%">
-        <p>venha deliciar com esse copão de sorverte</p>
-     </article></section></div>
- </body>
- </html>
+<body>
+    <div>
+
+        
+        <section class="section4">
+
+            <article class="article4">
+                <img src="../assets/image/sorvete1.png" id="imgsmarina">
+                <p>O sorvete de Ashta é de leite com flor de laranjeira. R$:12,00</p>
+            </article>
+
+
+            <article class="article4">
+
+                <img src="../assets/image/sorvete3.png" id="imgsmarina">
+                <p>venha deliciar com esse copão de sorverte</p>
+            </article>
+
+            <article class="article4">
+
+                <img src="../assets/image/sorvete2.png" id="imgsmarina">
+                <p>venha deliciar com esse copão de sorverte</p>
+            </article>
+        </section>
+
+    </div>
+</body>
+
+</html>
