--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -19,13 +19,13 @@
             <article class="article4">
 
                 <img src="../assets/image/sorvete3.png" id="imgsmarina">
-                <p>venha deliciar com esse copão de sorverte</p>
+                <p>vSorvete de pote ao greme, como calda de chocolate. R$:14,00</p>
             </article>
 
             <article class="article4">
 
                 <img src="../assets/image/sorvete2.png" id="imgsmarina">
-                <p>venha deliciar com esse copão de sorverte</p>
+                <p>vSorvete de greme com varias frutas. R$:14,00</p>
             </article>
         </section>
 
