--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                  lla tincidunt, nisl ut blandit aliquet, sapien nibh interdum leo, sit amet tincid
                  unt nulla metus id leo. Nunc aliquam massa quis interdum finibus. Nunc nibh nulla
                  , blandit tincidunt convallis eget, dapibus vel nibh. Fusce interdum porta sem eu 
-                 ornare. Praesent porttitor efficitur nisl at imperdiet. Sed ac volutpat tellus. In
+                 ornare. Praesent porttitor efficitur nisl at imperdiet. Sed ac volutpat tellus. I
              </p>
         </div>
     </article>
