alteração do título pag inicial

--- a/index.html
+++ b/index.html
@@ -2,15 +2,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../assets/css/inicial.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 
 <body>
+<div id="título">
     <h1>Alpha Ice Cream</h1>
     <p>
         A melhor sorveteria da região!
     </p>
+</div>
     <!--Promoção especial-->
     <article id="art1">
         <div>
