projeto final de feedback

--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -7,25 +7,24 @@
     <link rel="stylesheet" href="../assets/css/feedback.css">
     <link rel="icon" href="/assets/image/sorvete.png">
 </head>
+<body> <!-- corpo do site -->
+    <div> <!--abertura de div que engloba tudo-->
+        <section id="pa6"> <!--abertura da section para melhor organização-->
+            <article> <!--abertura para colocação do form e h1-->
+                <h1>Entre em contato</h1> <!--abertura de h1 para a estitica do site-->
+                <form action="sucsses.html" class="form"> <!--abertura para colocar nome email e mensagem-->
+                    <label for="">Nome</label> <!--label para o Nome-->
+                    <input type="text" placeholder="Digite seu nome" id="pa1" required> <!--campo para escrever o nome-->
+                    <label for="email">E-mail</label> <!--label para o nome-->
+                    <input type="email" placeholder="Digite seu email" id="pa2" required> <!--campo para escrever o email-->
+                    <label for="message">Mensagem</label> <!--label para mensagem-->
+                    <input type="message" placeholder="Digite uma Mensagem" id="pa3" required minlength="8"> <!--campo para escrever uma mensagem que deve conter no minimo 8 caracteres-->
+                    <button id="pa4">Enviar</button> <!--botão para enviar-->
+                </form> <!--fechamento de tag-->
+            </article> <!-- fechamento de tag-->
+        </section> <!--fechamento de tag-->
+    </div> <!--fechamento de tag-->
 
-<body>
-    <div>
-        <section id="pa6">
-            <article>
-                <h1>Entre em contato</h1>
-                <form action="sucsses.html" class="form">
-                    <label for="">Nome</label>
-                    <input type="text" placeholder="Digite seu nome" id="pa1" required>
-                    <label for="email">E-mail</label>
-                    <input type="email" placeholder="Digite seu email" id="pa2" required>
-                    <label for="message">Mensagem</label>
-                    <input type="message" placeholder="Digite uma Mensagem" id="pa3" required minlength="8">
-                    <button id="pa4">Enviar</button>
-                </form>
-            </article>
-        </section>
-    </div>
+</body> <!--fechamento de tag-->
 
-</body>
-
-</html>
+</html> <!--fechamento de tag-->
