final do feedback

--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -7,24 +7,43 @@
     <link rel="stylesheet" href="../assets/css/feedback.css">
     <link rel="icon" href="/assets/image/sorvete.png">
 </head>
-<body> <!-- corpo do site -->
-    <div> <!--abertura de div que engloba tudo-->
-        <section id="pa6"> <!--abertura da section para melhor organização-->
-            <article> <!--abertura para colocação do form e h1-->
-                <h1>Entre em contato</h1> <!--abertura de h1 para a estitica do site-->
-                <form action="sucsses.html" class="form"> <!--abertura para colocar nome email e mensagem-->
-                    <label for="">Nome</label> <!--label para o Nome-->
-                    <input type="text" placeholder="Digite seu nome" id="pa1" required> <!--campo para escrever o nome-->
-                    <label for="email">E-mail</label> <!--label para o nome-->
-                    <input type="email" placeholder="Digite seu email" id="pa2" required> <!--campo para escrever o email-->
-                    <label for="message">Mensagem</label> <!--label para mensagem-->
-                    <input type="message" placeholder="Digite uma Mensagem" id="pa3" required minlength="8"> <!--campo para escrever uma mensagem que deve conter no minimo 8 caracteres-->
-                    <button id="pa4">Enviar</button> <!--botão para enviar-->
-                </form> <!--fechamento de tag-->
-            </article> <!-- fechamento de tag-->
-        </section> <!--fechamento de tag-->
-    </div> <!--fechamento de tag-->
 
-</body> <!--fechamento de tag-->
+<!-- corpo do site -->
 
-</html> <!--fechamento de tag-->
+<body>
+    <!--abertura de div que engloba tudo-->
+    <div>
+        <!--abertura da section para melhor organização-->
+        <section id="pa6">
+            <!--abertura para colocação do form e h1-->
+            <article>
+                <!--abertura de h1 para a estitica do site-->
+                <h1>Entre em contato</h1>
+                <!--abertura para colocar nome email e mensagem-->
+                <form action="sucsses.html" class="form">
+                    <!--label para o Nome-->
+                    <label for="">Nome</label>
+                    <!--campo para escrever o nome-->
+                    <input id="pa1" type="text" placeholder="Digite seu nome" required>
+                    <!--label para o email-->
+                    <label for="email">E-mail</label>
+                    <!--campo para escrever o email-->
+                    <input id="pa2" type="email" placeholder="Digite seu email" required>
+                    <!--label para mensagem-->
+                    <label for="message">Mensagem</label>
+                    <!--campo para escrever uma mensagem que deve conter no minimo 8 caracteres-->
+                    <input id="pa3" type="message" placeholder="Digite uma Mensagem" required minlength="8">
+                    <!--botão para enviar-->
+                    <button id="pa4">Enviar</button>
+                    <!--fechamento de tag-->
+                </form>
+                <!-- fechamento de tag-->
+            </article>
+            <!--fechamento de tag-->
+        </section>
+        <!--fechamento de tag-->
+    </div>
+    <!--fechamento de tag-->
+</body>
+
+</html>
