--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -13,10 +13,11 @@
 <body>
     <!--abertura de div que engloba tudo-->
     <div>
-        <!--abertura da section para melhor organização-->
-        <section id="pa6">
-            <!--abertura para colocação do form e h1-->
-            <article>
+        <!--abertura para colocação do form e h1-->
+        <article id="pa6">
+            <!--abertura da section para melhor organização-->
+            <section>
+
                 <!--abertura de h1 para a estitica do site-->
                 <h1>Entre em contato</h1>
                 <!--abertura para colocar nome email e mensagem-->
@@ -38,9 +39,9 @@
                     <!--fechamento de tag-->
                 </form>
                 <!-- fechamento de tag-->
-            </article>
+            </section>
             <!--fechamento de tag-->
-        </section>
+        </article>
         <!--fechamento de tag-->
     </div>
     <!--fechamento de tag-->
