--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Sucsses</title>
+    <title>Feedback</title>
     <link rel="stylesheet" href="../assets/css/feedback.css">
     <link rel="icon" href="/assets/image/sorvete.png">
 </head>
