--- a/index.html
+++ b/index.html
@@ -77,6 +77,21 @@
 
             </article>
         </section>
+
+        <article>
+            <section>
+                <h3>Sorvete Alpha Alpino</h3>
+                <img src="assets/image/sorvete 10.png" width="15%" height="15%">
+                <p> Alpha Alpino na taça é a nova sensação, composto por chocolate Alpino e castanha, por apenas R$18,00.</p>
+
+            </section>
+            <section>
+                <h4> Sorvete Alpha Brownie</h4>
+                <img src="assets/image/sorvete 9.png" width="15%" height="15%">
+                <p> Alpha Brownie é a nova sensação, composto por chocolate e brownies, por apenas R$10,00</p>
+            </section>
+            <section></section>
+        </article>
     </div>
 </body>
 
