--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
 </div>
     <!--Promoção especial-->
     <article id="art1">
-        <div>
-             <h2>Promoção Especial</h2>
+        <h2>Promoção Especial</h2>
+        <div id="promoespecial">
+             
              <img src="https://media.gazetadopovo.com.br/2021/09/16184856/sorvetes-935x540.png" alt="imagen de várias casquinhas" 
              width="40%">
              <p>
