--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -6,29 +6,53 @@
 
 <body>
     <div>
-
+         <article class="article4">
         
-        <section class="section4">
+            <section class="section4">
 
-            <article class="article4">
+                <h3>sorvete</h3>
                 <img src="../assets/image/sorvete1.png" id="imgsmarina">
                 <p>O sorvete de Ashta é de leite com flor de laranjeira. R$:12,00</p>
             </article>
-
-
+        </section>
+             
             <article class="article4">
-
+                 <h3>sorvete</h3>
                 <img src="../assets/image/sorvete3.png" id="imgsmarina">
                 <p>vSorvete de pote ao greme, como calda de chocolate. R$:14,00</p>
             </article>
 
             <article class="article4">
-
+                 <h3>sorvete</h3>
                 <img src="../assets/image/sorvete2.png" id="imgsmarina">
                 <p>vSorvete de greme com varias frutas. R$:14,00</p>
             </article>
+             <article class="article4">
+                <h3>sorvete</h3>
+                <img src="../assets/image/soverte4.png" id="imgsmarina">
+                <p>Sorvete de chocolate, com uma difina camada de greme, com cobertura de chocolate
+                    R$:14;00
+                </p>
         </section>
+        <article class="article4">
+            <h3>sorvete</h3>
+           <img src="../assets/image/sorvete6.png" id="imgsmarina">
+           <p>Casquinha personalizada.R$:12,00</p>
+       </article>
+       </section>
 
+       <article class="article4">
+        <h3>sorvete</h3>
+       <img src="../assets/image/sorvete7.png" id="imgsmarina">
+       <p>vSorvete de pote ao greme, como calda de chocolate personalizado R$:14,00</p>
+   </article>
+    </section>
+
+    <article class="article4">
+        <h3>sorvete</h3>
+       <img src="../assets/image/sorvete8.png" id="imgsmarina">
+       <p>Sorvete de taça sabor frutas vermelhas, como calda de Morango. R$:14,00</p>
+   </article>
     </div>
 </body>
 
