--- a/index.html
+++ b/index.html
@@ -90,7 +90,12 @@
                 <img src="assets/image/sorvete 9.png" width="15%" height="15%">
                 <p> Alpha Brownie é a nova sensação, composto por chocolate e brownies, por apenas R$10,00</p>
             </section>
-            <section></section>
+            <section>
+                <h5>Picole Alpha caramelo</h5>
+                <img src="assets/image/sorvete 12.png" width="15%" height="15%">
+                <p>O picolé Alpha caramelo é a nova sensação, composto por chocolate branco, caramelo, e castanhas de caju, por apenas R$8,00</p>
+
+            </section>
         </article>
     </div>
 </body>
