--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
              
              <img src="https://media.gazetadopovo.com.br/2021/09/16184856/sorvetes-935x540.png" alt="imagen de várias casquinhas" 
              width="40%">
-             <p>
+             <p id="textopromo">
                Todos os sabores de casquinha do verão estão em promoção!
                 Desde frutas vermelhas, limão, abacaxi até framboesa, cereja.
                 Tudo isso de R$20,00 por R$9,99. Não perca essa oportunidade!
