--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -1,45 +1,69 @@
 <!DOCTYPE html>
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="../assets/css/inicial.css">
     <title>Document</title>
 </head>
+
 <body>
     <div id="dediv"> <!--DEPOIMENTO DIV-->
         <p id="dep1">Depoimento</p> <!--DEPOIMENTO PARAGRAFO 1-->
-        <section id="depsec1">
-            <article id="depart1">
-                <img src="../assets/image/Ana.jpg" alt="" id="deimg">
-                <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>               
-            </article>
-            <article id="depart1">
-                <img src="../assets/image/Andrey.jpg" alt=""id="deimg">
-                <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>
-
-            </article>
-            <article id="depart1">
-                <img src="../assets/image/Giulia.jpg" alt=""id="deimg">
-                <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>
-
-            </article>
-        </section>
-        <section id="depsec1">
-            <article id="depart1">
-                <img src="../assets/image/Scaranello.jpg" alt=""id="deimg">
-                <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>               
-            </article>
-            <article id="depart1">
-                <img src="../assets/image/Zambon.jpg" alt=""id="deimg">
-                <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>
-
-            </article>
-            <article id="depart1">
-                <img src="../assets/image/Marina.jpg" alt=""id="deimg">
-                <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que puder.</p>
-
-            </article>
-        </section>
+        <article id="depsec1">
+            <section id="depart1">
+                <h2>Giulis Marques</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Giulia.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+            <section id="depart1">
+                <h2>Marina Moraes</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Marina.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+            <section id="depart1">
+                <h2>Matheus Zambon</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Zambon.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+        </article>
+        
+        <article id="depsec1">
+            <section id="depart1">
+                <h2>Matheus Scaranello</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Scaranello.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+            <section id="depart1">
+                <h2>Andrey Botero</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Andrey.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+            <section id="depart1">
+                <h2>Ana Cavalcante</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Ana.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+        </article>
     </div>
-    
+
 </body>
+
 </html>
