--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -11,7 +11,7 @@
         <p id="dep1">Depoimento</p> <!--DEPOIMENTO PARAGRAFO 1-->
         <article id="depsec1">
             <section id="depart1">
-                <h2>Giulis Marques</h2>
+                <h2>Giulia Marques</h2>
                 <div class="img_text">
                     <img src="../assets/image/Giulia.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
