--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -11,7 +11,7 @@
         <p id="dep1">Depoimento</p> <!--DEPOIMENTO PARAGRAFO 1-->
         <article id="depsec1">
             <section id="depart1">
-                <h2>Giulia Marques</h2>
+                <h2 class="namesdepoimento">Giulia Marques</h2>
                 <div class="img_text">
                     <img src="../assets/image/Giulia.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
@@ -19,7 +19,7 @@
                 </div>
             </section>
             <section id="depart1">
-                <h2>Marina Moraes</h2>
+                <h2 class="namesdepoimento">Marina Moraes</h2>
                 <div class="img_text">
                     <img src="../assets/image/Marina.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
@@ -27,7 +27,7 @@
                 </div>
             </section>
             <section id="depart1">
-                <h2>Matheus Zambon</h2>
+                <h2 class="namesdepoimento">Matheus Zambon</h2>
                 <div class="img_text">
                     <img src="../assets/image/Zambon.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
@@ -38,7 +38,7 @@
         
         <article id="depsec1">
             <section id="depart1">
-                <h2>Matheus Scaranello</h2>
+                <h2 class="namesdepoimento">Matheus Scaranello</h2>
                 <div class="img_text">
                     <img src="../assets/image/Scaranello.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
@@ -46,7 +46,7 @@
                 </div>
             </section>
             <section id="depart1">
-                <h2>Andrey Botero</h2>
+                <h2 class="namesdepoimento">Andrey Botero</h2>
                 <div class="img_text">
                     <img src="../assets/image/Andrey.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
@@ -54,7 +54,7 @@
                 </div>
             </section>
             <section id="depart1">
-                <h2>Ana Cavalcante</h2>
+                <h2 class="namesdepoimento">Ana Cavalcante</h2>
                 <div class="img_text">
                     <img src="../assets/image/Ana.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
