--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
              width="40%">
              <p id="textopromo">
                Todos os sabores de casquinha do verão estão em promoção!
-                Desde frutas vermelhas, limão, abacaxi até framboesa, cereja.
+                Desde frutas vermelhas, limão, abacaxi até framboesa e cereja.
                 Tudo isso de R$20,00 por R$9,99. Não perca essa oportunidade!
                 Sorvetes incríveis é só aqui na Alpha Ice Cream.
              </p>
