--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -11,6 +11,7 @@
 <!-- corpo do site -->
 
 <body>
+    <iframe src="../layout/header.html" frameborder="0" width="100%"></iframe>
     <!--abertura de div que engloba tudo-->
     <div>
         <!--abertura para colocação do form e h1-->
@@ -45,6 +46,7 @@
         <!--fechamento de tag-->
     </div>
     <!--fechamento de tag-->
+    <iframe src="../layout/footer.html" frameborder="0" width="100%"></iframe>
 </body>
 
 </html>
