--- a/index.html
+++ b/index.html
@@ -3,36 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <link rel="icon" href="assets/image/sorvete.png" type="image/x-icon">
+    <title>Alpha IceCream</title>
 </head>
 
 <body>
-<div id="título">
-    <h1>Alpha Ice Cream</h1>
-    <p>
-        A melhor sorveteria da região!
-    </p>
-</div>
+    <header>
+        <iframe src="layout/header.html" frameborder="0" width="100%" height="175px" scrolling="no"></iframe>
+    </header>
+    <div id="título">
+        <h1>Alpha Ice Cream</h1>
+        <p>
+            A melhor sorveteria da região!
+        </p>
+    </div>
     <!--Promoção especial-->
     <article id="art1">
         <h2>Promoção Especial</h2>
         <div id="promoespecial">
-             
-             <img src="https://media.gazetadopovo.com.br/2021/09/16184856/sorvetes-935x540.png" alt="imagen de várias casquinhas" 
-             width="40%">
-             <p id="textopromo">
-               Todos os sabores de casquinha do verão estão em promoção!
+
+            <img src="https://media.gazetadopovo.com.br/2021/09/16184856/sorvetes-935x540.png"
+                alt="imagen de várias casquinhas" width="40%">
+            <p id="textopromo">
+                Todos os sabores de casquinha do verão estão em promoção!
                 Desde frutas vermelhas, limão, abacaxi até framboesa e cereja.
                 Tudo isso de R$20,00 por R$9,99. Não perca essa oportunidade!
                 Sorvetes incríveis é só aqui na Alpha Ice Cream.
-             </p>
+            </p>
         </div>
     </article>
-
-
-
-
-
 
     <div id="dediv"> <!--DEPOIMENTO DIV-->
         <p id="dep1">Depoimento</p> <!--DEPOIMENTO PARAGRAFO 1-->
@@ -76,5 +75,8 @@
         </section>
     </div>
 </body>
+<footer>
+    <iframe src="layout/footer.html" frameborder="0" scroling="no" width="100%"></iframe>
+</footer>
 
 </html>
