--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -5,12 +5,15 @@
     <meta charset="UTF-8">
     <title>Feedback</title>
     <link rel="stylesheet" href="../assets/css/feedback.css">
-    <link rel="icon" href="/assets/image/sorvete.png">
+    <link rel="icon" href="../assets/image/sorvete.png" type="image/x-icon">
 </head>
 
 <!-- corpo do site -->
 
 <body>
+    <header>
+        <iframe src="../layout/header.html" frameborder="0" width="100%" height="175px" scrolling="no"></iframe>   
+    </header>
     <!--abertura de div que engloba tudo-->
     <div>
         <!--abertura para colocação do form e h1-->
