--- a/index.html
+++ b/index.html
@@ -76,7 +76,6 @@
     </div>
 </body>
 <footer>
-    <iframe src="layout/footer.html" frameborder="0" scroling="no" width="100%"></iframe>
+    <iframe src="layout/footer.html" frameborder="0" width="100%" id="iframe1"></iframe>
 </footer>
-
 </html>
