--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -48,7 +48,7 @@
         <!--fechamento de tag-->
     </div>
     <!--fechamento de tag-->
-    <iframe src="../layout/footer.html" frameborder="0" width="100%" ></iframe>
+    <iframe src="../layout/footer.html" frameborder="0" width="100%" id="iframe1"></iframe>
 </body>
 
 </html>
