--- a/pages/inicial.html
+++ b/pages/inicial.html
@@ -6,6 +6,7 @@
 
 <body>
     <div>
+        <h1 id="titulosorvetes">Sorvetes</h1>
         <article class="article4">
 
             <section class="box">
@@ -32,7 +33,25 @@
                 </div>
             </section>
         </article>
-        <article class="section4">
+
+        <article class="article4">
+
+            <section class="box">
+                <div id="div_1">
+                    <h3>sorvete</h3>
+                    <div class="img_text1">
+                        <img src="../assets/image/sorvete7.png" id="imgsmarina">
+                    <p>vSorvete de pote ao greme, como calda de chocolate personalizado R$:14,00</p>
+                    </div>
+            </section>
+            <Section class="box">
+                <h3>sorvete</h3>
+                <div class="img_text1">
+                    <img src="../assets/image/sorvete6.png" id="imgsmarina">
+                    <p>Casquinha personalizada.R$:12,00</p>
+                </div>
+            </Section>
+
             <section class="box">
                 <h3>sorvete</h3>
                 <div class="img_text1">
@@ -42,22 +61,6 @@
                     </p>
                 </div>
             </section>
-            <section class="box">
-                <h3>sorvete</h3>
-                <div class="img_text1">
-                    <img src="../assets/image/sorvete6.png" id="imgsmarina">
-                    <p>Casquinha personalizada.R$:12,00</p>
-                </div>
-            </section>
-
-            <section class="box">
-                <h3>sorvete</h3>
-                <div class="img_text1">
-                    <img src="../assets/image/sorvete7.png" id="imgsmarina">
-                    <p>vSorvete de pote ao greme, como calda de chocolate personalizado R$:14,00</p>
-                </div>
-            </section>
-
         </article>
 
         <article class="article4">
@@ -68,7 +71,22 @@
                     <p>Sorvete de taça sabor frutas vermelhas, como calda de Morango. R$:14,00</p>
                 </div>
             </section>
+            <section class="box">
+                <h3>sorvete</h3>
+                <div class="img_text1">
+                    <img src="../assets/image/sorvete5.png" id="imgsmarina">
+                    <p>Sorvete de taça sabor frutas vermelhas, como calda de Morango. R$:14,00</p>
+                </div>
+            </section>
+            <section class="box">
+                <h3>sorvete</h3>
+                <div class="img_text1">
+                    <img src="../assets/image/sorvete11.png" id="imgsmarina">
+                    <p>Sorvete de taça sabor frutas vermelhas, como calda de Morango. R$:14,00</p>
+                </div>
+            </section>
         </article>
+
     </div>
 </body>
 
