--- a/index.html
+++ b/index.html
@@ -74,15 +74,66 @@
             </article>
         </section>
     </div>
+    <div id="dediv"> <!--DEPOIMENTO DIV-->
+        <p id="dep1">Depoimento</p> <!--DEPOIMENTO PARAGRAFO 1-->
+        <article id="depsec1">
+            <section id="depart1">
+                <h2 class="namesdepoimento">Giulia Marques</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Giulia.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+            <section id="depart1">
+                <h2 class="namesdepoimento">Marina Moraes</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Marina.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+            <section id="depart1">
+                <h2 class="namesdepoimento">Matheus Zambon</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Zambon.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+        </article>
+        
+        <article id="depsec1">
+            <section id="depart1">
+                <h2 class="namesdepoimento">Matheus Scaranello</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Scaranello.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+            <section id="depart1">
+                <h2 class="namesdepoimento">Andrey Botero</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Andrey.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+            <section id="depart1">
+                <h2 class="namesdepoimento">Ana Cavalcante</h2>
+                <div class="img_text">
+                    <img src="../assets/image/Ana.jpg" alt="" id="deimg" width="64px">
+                    <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
+                        puder.</p>
+                </div>
+            </section>
+        </article>
+    </div>
+
     <footer>
-<<<<<<< HEAD
     <iframe src="layout/footer.html" frameborder="0" scroling="no" width="100%"></iframe>
 </footer>
-=======
-        <iframe src="layout/footer.html" frameborder="0" width="100%" id="iframe1"></iframe>
-    </footer>
-</body>
->>>>>>> 201c63495277f4f68a79d0d5d8b56cf6c5684c39
 
 </body>
 
