--- a/pages/sucsses.html
+++ b/pages/sucsses.html
@@ -33,7 +33,9 @@
         <!--fechamento de tag-->
     </div>
     <!--fechamento de tag-->
-    <iframe src="../layout/footer.html" frameborder="0" width="100%" id="iframe1"></iframe>
+    <footer>
+        <iframe src="../layout/footer.html" frameborder="0" width="100%" id="iframe1"></iframe>
+    </footer>
 </body>
 
 </html>
