--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <section id="depart1">
                 <h2 class="namesdepoimento">Giulia Marques</h2>
                 <div class="img_text">
-                    <img src="../assets/image/Giulia.jpg" alt="" id="deimg" width="64px">
+                    <img src="assets/image/Giulia.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
                         puder.</p>
                 </div>
@@ -88,7 +88,7 @@
             <section id="depart1">
                 <h2 class="namesdepoimento">Marina Moraes</h2>
                 <div class="img_text">
-                    <img src="../assets/image/Marina.jpg" alt="" id="deimg" width="64px">
+                    <img src="assets/image/Marina.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
                         puder.</p>
                 </div>
@@ -96,7 +96,7 @@
             <section id="depart1">
                 <h2 class="namesdepoimento">Matheus Zambon</h2>
                 <div class="img_text">
-                    <img src="../assets/image/Zambon.jpg" alt="" id="deimg" width="64px">
+                    <img src="assets/image/Zambon.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
                         puder.</p>
                 </div>
@@ -107,7 +107,7 @@
             <section id="depart1">
                 <h2 class="namesdepoimento">Matheus Scaranello</h2>
                 <div class="img_text">
-                    <img src="../assets/image/Scaranello.jpg" alt="" id="deimg" width="64px">
+                    <img src="assets/image/Scaranello.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
                         puder.</p>
                 </div>
@@ -115,7 +115,7 @@
             <section id="depart1">
                 <h2 class="namesdepoimento">Andrey Botero</h2>
                 <div class="img_text">
-                    <img src="../assets/image/Andrey.jpg" alt="" id="deimg" width="64px">
+                    <img src="assets/image/Andrey.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
                         puder.</p>
                 </div>
@@ -123,7 +123,7 @@
             <section id="depart1">
                 <h2 class="namesdepoimento">Ana Cavalcante</h2>
                 <div class="img_text">
-                    <img src="../assets/image/Ana.jpg" alt="" id="deimg" width="64px">
+                    <img src="assets/image/Ana.jpg" alt="" id="deimg" width="64px">
                     <p>Gostei muito da comida, me trouxe esperiencias inesqueciveis, adorei o lugar e voltarei sempre que
                         puder.</p>
                 </div>
