--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                     <h3>sorvete</h3>
                     <div class="img_text1">
                         <img src="../assets/image/sorvete1.png" id="imgsmarina">
-                        <p>O sorvete de Ashta é de leite com flor de laranjeira. R$:12,00</p>
+                        <p>O sorvete de Ashta é de leite com flor de laranjeira. R$:12,00!</p>
                     </div>
             </section>
             <Section class="box">
