meu comite na index

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
             </section>
         </article>
-    
+    </div>
 
     <footer>
     <iframe src="layout/footer.html" frameborder="0" scroling="no" width="100%"></iframe>
