--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <iframe src="layout/header.html" frameborder="0" width="100%" height="175px" scrolling="no"></iframe>
     </header>
     <div id="título">
-        <h1>Alpha Ice Cream</h1>
+        <h1>Alpha IceCream</h1>
         <p>
             A melhor sorveteria da região!
         </p>
@@ -42,14 +42,14 @@
                 <div id="div_1">
                     <h3>sorvete</h3>
                     <div class="img_text1">
-                        <img src="../assets/image/sorvete1.png" id="imgsmarina">
+                        <img src="assets/image/sorvete1.png" id="imgsmarina">
                         <p>O sorvete de Ashta é de leite com flor de laranjeira. R$:12,00!</p>
                     </div>
             </section>
             <Section class="box">
                 <h3>sorvete</h3>
                 <div class="img_text1">
-                    <img src="../assets/image/sorvete3.png" id="imgsmarina">
+                    <img src="assets/image/sorvete3.png" id="imgsmarina">
                     <p>vSorvete de pote ao greme, como calda de chocolate. R$:14,00</p>
                 </div>
             </Section>
@@ -57,7 +57,7 @@
             <section class="box">
                 <h3>sorvete</h3>
                 <div class="img_text1">
-                    <img src="../assets/image/sorvete2.png" id="imgsmarina">
+                    <img src="assets/image/sorvete2.png" id="imgsmarina">
                     <p>vSorvete de greme com varias frutas. R$:14,00</p>
                 </div>
             </section>
@@ -69,14 +69,14 @@
                 <div id="div_1">
                     <h3>sorvete</h3>
                     <div class="img_text1">
-                        <img src="../assets/image/sorvete7.png" id="imgsmarina">
+                        <img src="assets/image/sorvete7.png" id="imgsmarina">
                     <p>vSorvete de pote ao greme, como calda de chocolate personalizado R$:14,00</p>
                     </div>
             </section>
             <Section class="box">
                 <h3>sorvete</h3>
                 <div class="img_text1">
-                    <img src="../assets/image/sorvete6.png" id="imgsmarina">
+                    <img src="assets/image/sorvete6.png" id="imgsmarina">
                     <p>Casquinha personalizada.R$:12,00</p>
                 </div>
             </Section>
@@ -84,7 +84,7 @@
             <section class="box">
                 <h3>sorvete</h3>
                 <div class="img_text1">
-                    <img src="../assets/image/soverte4.png" id="imgsmarina">
+                    <img src="assets/image/soverte4.png" id="imgsmarina">
                     <p>Sorvete de chocolate, com uma difina camada de greme, com cobertura de chocolate
                         R$:14;00
                     </p>
@@ -96,21 +96,21 @@
             <section class="box">
                 <h3>sorvete</h3>
                 <div class="img_text1">
-                    <img src="../assets/image/sorvete8.png" id="imgsmarina">
+                    <img src="assets/image/sorvete8.png" id="imgsmarina">
                     <p>Sorvete de taça sabor frutas vermelhas, como calda de Morango. R$:14,00</p>
                 </div>
             </section>
             <section class="box">
                 <h3>sorvete</h3>
                 <div class="img_text1">
-                    <img src="../assets/image/sorvete5.png" id="imgsmarina">
+                    <img src="assets/image/sorvete5.png" id="imgsmarina">
                     <p>Sorvete de taça sabor frutas vermelhas, como calda de Morango. R$:14,00</p>
                 </div>
             </section>
             <section class="box">
                 <h3>sorvete</h3>
                 <div class="img_text1">
-                    <img src="../assets/image/sorvete11.png" id="imgsmarina">
+                    <img src="assets/image/sorvete11.png" id="imgsmarina">
                     <p>Sorvete de taça sabor frutas vermelhas, como calda de Morango. R$:14,00</p>
                 </div>
             </section>
